Fixing overflow on mobile devices

--- a/index.css
+++ b/index.css
@@ -8,6 +8,11 @@
     font-family: "Montserrat", sans-serif;
 }
 
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 
  /*  Navigation Bar Styling Starts from here*/ 
 
@@ -126,13 +131,13 @@
     
     /* Nav Section */
 
-    * {
+    body {
         overflow-x: hidden;
         overflow-y: hidden;
     }
 
     .navlinks {
-        position: absolute;
+        position: fixed;
         right: 0px;
         height: 89vh;
         top: 10vh;
@@ -143,13 +148,19 @@
         border-radius: 10px;
         width: 50%;
         transform: translateX(100%);
+        -webkit-transform: translateX(100%);
+        -moz-transform: translateX(100%);
         transition: transform 0.4s ease-in;
+        -webkit-transition:  transform 0.4s ease-in;
+        -moz-transition: transform 0.4s ease-in;
     }
 
    
 
     .nav-active {
         transform: translateX(0%);
+        -webkit-transform: translateX(0%);
+        -moz-transform: translateX(0%);
     }
   
    .burger{
